--- a/readthedocsext/theme/templates/projects/partials/project_list.html
+++ b/readthedocsext/theme/templates/projects/partials/project_list.html
@@ -51,11 +51,11 @@
 
 {% block list_item_right_menu %}
   <div class="ui small buttons" data-bind="event: {mouseover: fetch}">
-    <button class="ui icon button"
+    <a class="ui icon button"
        data-content="{% trans "View project documentation" %}"
-       data-bind="attr: {href: url_docs}, css: {disabled: loading}">
+       data-bind="attr: {href: url_docs}, css: {loading: loading}">
       <i class="fa-duotone fa-arrow-up-right-from-square icon"></i>
-    </button>
+    </a>
 
     {% if request.user|is_admin:object %}
       <button class="ui icon dropdown button">
