--- a/readthedocsext/theme/templates/projects/partials/project_list.html
+++ b/readthedocsext/theme/templates/projects/partials/project_list.html
@@ -50,10 +50,11 @@
 {% endblock list_item_start %}
 
 {% block list_item_right_menu %}
-  <div class="ui small buttons" data-bind="event: {mouseover: fetch}">
+  <div class="ui small buttons" data-bind="event: {mouseover: fetch, focusin: fetch}">
     <a class="ui icon button"
        data-content="{% trans "View project documentation" %}"
-       data-bind="attr: {href: url_docs}, css: {loading: loading}">
+       data-bind="attr: {href: url_docs}, css: {loading: loading}"
+       tabindex="0">
       <i class="fa-duotone fa-arrow-up-right-from-square icon"></i>
     </a>
 
