Update docs icon on project listing to match icon on version listing

--- a/readthedocsext/theme/templates/projects/partials/project_list.html
+++ b/readthedocsext/theme/templates/projects/partials/project_list.html
@@ -55,7 +55,7 @@
        data-content="{% trans "View project documentation" %}"
        data-bind="attr: {href: url_docs}, css: {loading: loading}"
        tabindex="0">
-      <i class="fa-duotone fa-arrow-up-right-from-square icon"></i>
+      <i class="fa-duotone fa-book icon"></i>
     </a>
 
     {% if request.user|is_admin:object %}
