Add more blocks to the table listing template
Mostly for overriding table column classes.

--- a/readthedocsext/theme/templates/includes/crud/table_list.html
+++ b/readthedocsext/theme/templates/includes/crud/table_list.html
@@ -261,68 +261,76 @@
             {% block list_item_start %}<tr class="middle aligned">{% endblock list_item_start %}
               {% block list_item %}
 
-                <td class="collapsing">
-                  <div class="ui tiny header">
-                    {% block list_item_image %}
-                      {% comment %}
-                        On the off chance you actually want an image here,
-                        override this whole block. We use a fake image here to
-                        avoid customizing CSS to avoid width/spacing issues.
-                      {% endcomment %}
-                      {# TODO consider making our own .ui.table .ui.icon.header styles #}
-                      <span class="ui center aligned image">
-                        {% block list_item_icon %}
-                          {% comment %}
-                            <i class="fas fa-folder icon"></i>
-                          {% endcomment %}
-                        {% endblock list_item_icon %}
-                      </span>
-                    {% endblock list_item_image %}
-                    <div class="content">
-                      {% block list_item_header %}
-                        {{ object }}
-                      {% endblock list_item_header %}
-                    </div>
-                  </div>
-                </td>
-
-                <td>
-                  {% block list_item_meta %}
-                    <div class="ui relaxed stackable small middle aligned horizontal list">
-                      {% block list_item_meta_items %}
-                        {% comment %}
-                          <div class="item">
-                            <i class="fa-solid fa-code-branch icon"></i>
-                            <code>{{ build.commit|truncatechars:8 }}</code>
-                          </div>
-                        {% endcomment %}
-                      {% endblock list_item_meta_items %}
-                    </div>
-                  {% endblock list_item_meta %}
-                </td>
-
-                {% block list_item_extra %}
+                {% block list_item_header_column %}
                   <td class="collapsing">
-                    <div class="ui relaxed stackable small middle aligned horizontal list">
-                      {% block list_item_extra_items %}
-                      {% endblock list_item_extra_items %}
+                    <div class="ui tiny header">
+                      {% block list_item_image %}
+                        {% comment %}
+                          On the off chance you actually want an image here,
+                          override this whole block. We use a fake image here to
+                          avoid customizing CSS to avoid width/spacing issues.
+                        {% endcomment %}
+                        {# TODO consider making our own .ui.table .ui.icon.header styles #}
+                        <span class="ui center aligned image">
+                          {% block list_item_icon %}
+                            {% comment %}
+                              <i class="fas fa-folder icon"></i>
+                            {% endcomment %}
+                          {% endblock list_item_icon %}
+                        </span>
+                      {% endblock list_item_image %}
+                      <div class="content">
+                        {% block list_item_header %}
+                          {{ object }}
+                        {% endblock list_item_header %}
+                      </div>
                     </div>
                   </td>
-                {% endblock list_item_extra %}
+                {% endblock list_item_header_column %}
 
-                <td class="right aligned collapsing">
-                  {% block list_item_right_menu %}
-                    <div class="ui mini icon buttons">
-                      {% block list_item_right_buttons %}
-                        {% comment %}
-                          <a class="ui button">
-                            <i class="fa-solid fa-refresh icon"></i>
-                          </a>
-                        {% endcomment %}
-                      {% endblock list_item_right_buttons %}
-                    </div>
-                  {% endblock list_item_right_menu %}
-                </td>
+                {% block list_item_meta_column %}
+                  <td>
+                    {% block list_item_meta %}
+                      <div class="ui relaxed stackable small middle aligned horizontal list">
+                        {% block list_item_meta_items %}
+                          {% comment %}
+                            <div class="item">
+                              <i class="fa-solid fa-code-branch icon"></i>
+                              <code>{{ build.commit|truncatechars:8 }}</code>
+                            </div>
+                          {% endcomment %}
+                        {% endblock list_item_meta_items %}
+                      </div>
+                    {% endblock list_item_meta %}
+                  </td>
+                {% endblock list_item_meta_column %}
+
+                {% block list_item_extra_column %}
+                  {% block list_item_extra %}
+                    <td class="collapsing">
+                      <div class="ui relaxed stackable small middle aligned horizontal list">
+                        {% block list_item_extra_items %}
+                        {% endblock list_item_extra_items %}
+                      </div>
+                    </td>
+                  {% endblock list_item_extra %}
+                {% endblock list_item_extra_column %}
+
+                {% block list_item_right_column %}
+                  <td class="right aligned collapsing">
+                    {% block list_item_right_menu %}
+                      <div class="ui mini icon buttons">
+                        {% block list_item_right_buttons %}
+                          {% comment %}
+                            <a class="ui button">
+                              <i class="fa-solid fa-refresh icon"></i>
+                            </a>
+                          {% endcomment %}
+                        {% endblock list_item_right_buttons %}
+                      </div>
+                    {% endblock list_item_right_menu %}
+                  </td>
+                {% endblock list_item_right_column %}
 
               {% endblock list_item %}
             </tr>
