--- a/readthedocsext/theme/templates/projects/partials/edit/redirect_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/redirect_list.html
@@ -36,7 +36,6 @@
   </a>
 {% endblock list_placeholder_text %}
 
-{# Column override to drop the collapsing class, we use a fixed table #}
 {% block list_item_right_buttons %}
   <a class="ui button"
      href="{% url 'projects_redirects_edit' project_slug=project.slug redirect_pk=object.pk %}"
@@ -67,57 +66,53 @@
 {% endblock list_item_right_buttons %}
 
 {% block list_item_image %}
+  <i class="fad fa-diamond-turn-right icon"></i>
 {% endblock list_item_image %}
 
-{% block list_item_header_column %}
-  <td class="thirteen wide desktop ten wide tablet">
-    <div class="ui list">
-      <div class="item">
-          <strong>From:</strong>
-          {% spaceless %}
-            {% if object.from_url %}
-              {% if object.redirect_type == "page" %}
-                <span>/</span><span class="ui violet text">$lang</span>
-                <span>/</span><span class="ui violet text">$version</span>
-              {% endif %}
-              <span>{{ object.from_url }}</span>
-              {% if object.redirect_type == "prefix" %}
-                <span class="ui violet text">$1</span>
-              {% endif %}
-            {% else %}
-              {% if object.redirect_type == "sphinx_html" %}
-                <span>/**/</span><span class="ui violet text">$1</span><span>/</span>
-              {% elif object.redirect_type == "sphinx_htmldir" %}
-                <span>/**/</span><span class="ui violet text">$1</span><span>.html</span>
-              {% endif %}
-            {% endif %}
-          {% endspaceless %}
-      </div>
+{% block list_item_header_classes %}{{ block.super }} all breaking{% endblock %}
 
-      <div class="item">
-          <strong>To:</strong>
-          {% spaceless %}
-            {% if object.from_url %}
-              {% if object.redirect_type == "page" or object.redirect_type == "prefix" %}
-                <span>/</span><span class="ui violet text">$lang</span>
-                <span>/</span><span class="ui violet text">$version</span>
-                {% if object.redirect_type == "prefix" %}
-                  <span>/</span><span class="ui violet text">$1</span>
-                {% endif %}
-              {% endif %}
-              <span>{{ object.to_url }}</span>
-            {% else %}
-              {% if object.redirect_type == "sphinx_html" %}
-                <span>/**/</span><span class="ui violet text">$1</span><span>.html</span>
-              {% elif object.redirect_type == "sphinx_htmldir" %}
-                <span>/**/</span><span class="ui violet text">$1</span><span>/</span>
-              {% endif %}
-            {% endif %}
-          {% endspaceless %}
-      </div>
-    </div>
-  </td>
-{% endblock list_item_header_column %}
+{% block list_item_header %}
+  {% spaceless %}
+    {% if object.from_url %}
+      {% if object.redirect_type == "page" %}
+        <span>/</span><span class="ui violet text">$lang</span>
+        <span>/</span><span class="ui violet text">$version</span>
+      {% endif %}
+      <span>{{ object.from_url }}</span>
+      {% if object.redirect_type == "prefix" %}
+        <span class="ui violet text">$1</span>
+      {% endif %}
+    {% else %}
+      {% if object.redirect_type == "sphinx_html" %}
+        <span>/**/</span><span class="ui violet text">$1</span><span>/</span>
+      {% elif object.redirect_type == "sphinx_htmldir" %}
+        <span>/**/</span><span class="ui violet text">$1</span><span>.html</span>
+      {% endif %}
+    {% endif %}
+  {% endspaceless %}
+
+  <div class="sub header">
+    <label>{% trans "Redirect to:" %}</label>
+    {% spaceless %}
+      {% if object.from_url %}
+        {% if object.redirect_type == "page" or object.redirect_type == "prefix" %}
+          <span>/</span><span class="ui violet text">$lang</span>
+          <span>/</span><span class="ui violet text">$version</span>
+          {% if object.redirect_type == "prefix" %}
+            <span>/</span><span class="ui violet text">$1</span>
+          {% endif %}
+        {% endif %}
+        <span>{{ object.to_url }}</span>
+      {% else %}
+        {% if object.redirect_type == "sphinx_html" %}
+          <span>/**/</span><span class="ui violet text">$1</span><span>.html</span>
+        {% elif object.redirect_type == "sphinx_htmldir" %}
+          <span>/**/</span><span class="ui violet text">$1</span><span>/</span>
+        {% endif %}
+      {% endif %}
+    {% endspaceless %}
+  </div>
+{% endblock list_item_header %}
 
 {% block list_item_meta_column %}
 {% endblock list_item_meta_column %}
