--- a/readthedocsext/theme/templates/account/login.html
+++ b/readthedocsext/theme/templates/account/login.html
@@ -4,7 +4,7 @@
 {% load crispy_forms_tags %}
 {% load i18n %}
 
-{% block title %}{% trans "Log in" %}{% endblock %}
+{% block head_title %}{% trans "Log in" %}{% endblock %}
 
 {% block content %}
   <div class="ui stackable padded grid">
@@ -14,46 +14,62 @@
     <div class="twelve wide computer sixteen wide tablet sixteen wide mobile column">
       {% get_providers as socialaccount_providers %}
 
-      <div class="ui small stackable aligned secondary menu" data-bind="semanticui: {tab: {autoTabActivation: 'vcs', ignoreFirstLoad: true}}">
+      <div class="ui medium header">
+        {% block authentication_header %}
+          {% trans "Log in to continue" %}
+        {% endblock authentication_header %}
+      </div>
+
+      <div class="ui small stackable secondary two item menu" data-bind="semanticui: {tabs: {history: true, autoTabActivation: false}}">
+
         {# This is purposely minimal, as the verbiage for "Log in with connected account" is a mountful #}
-        <a class="left item active" data-tab="vcs" data-content="{% trans "Connect your account" %}">
+        <a class="item" data-tab="vcs">
           <i class="fad fa-cloud icon"></i>
+          {% block authentication_vcs_text %}{% trans "Connected account" %}{% endblock %}
         </a>
 
-        <a class="right item" data-tab="email">
+        <a class="item" data-tab="email">
           <i class="fad fa-envelope icon"></i>
-          {% trans "Log in with email" %}
+          {% block authentication_email_text %}{% trans "Log in with email" %}{% endblock %}
         </a>
+
       </div>
-      <div class="ui basic center aligned tab segment active" data-tab="vcs">
+
+      <div class="ui basic center aligned tab segment" data-tab="vcs">
         <div class="ui relaxed list">
-          {# Translators: this will read "Log in with GitHub", where "log in" is a verb #}
-          {% blocktrans asvar text_log_in %}Log in using{% endblocktrans %}
-          {% include "socialaccount/snippets/provider_list.html" with process="login" verbiage=text_log_in %}
+          {% block authentication_vcs %}
+            {# Translators: this will read "Log in with GitHub", where "log in" is a verb #}
+            {% blocktrans asvar text_log_in %}Log in using{% endblocktrans %}
+            {% include "socialaccount/snippets/provider_list.html" with process="login" verbiage=text_log_in %}
+          {% endblock authentication_vcs %}
         </div>
       </div>
       <div class="ui basic vertically fitted tab segment" data-tab="email">
+        {% block authentication_email %}
+          <p class="ui center aligned vertically fitted small basic fluid segment">
+            {# The /email addition is to route to the tab page on the login/signup forms, using the tab module history setting #}
+            {% blocktrans trimmed %}
+              Need an account? <a href="{{ signup_url }}#/email">Sign up</a> first.
+            {% endblocktrans %}
+          </p>
 
-        <p class="ui center aligned vertically fitted small basic fluid segment">
-          {% blocktrans trimmed %}
-            Need an account? <a href="{{ signup_url }}">Sign up</a> first.
-          {% endblocktrans %}
-        </p>
+          <form class="ui form" method="post" action="{% url "account_login" %}#/email">
+            {% csrf_token %}
+            {{ form|crispy }}
+            {% if redirect_field_value %}
+              <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+            {% endif %}
 
-        <form class="ui form" method="post" action="{% url "account_login" %}">
-          {% csrf_token %}
-          {{ form|crispy }}
-          {% if redirect_field_value %}
-            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-          {% endif %}
+            <a class="ui small text" href="{% url 'account_reset_password' %}">{% trans "Forgot your password?" %}</a>
+            <button class="ui primary right cleared floated button" type="submit">
+              {% trans "Log in" %}
+            </button>
 
-          <a class="ui small text" href="{% url 'account_reset_password' %}">{% trans "Forgot your password?" %}</a>
-          <button class="ui primary right floated button" type="submit">
-            {% trans "Log in" %}
-          </button>
-
-        </form>
+          </form>
+        {% endblock authentication_email %}
       </div>
+
+      {% block authentication_extra %}{% endblock %}
 
     </div>
   </div>
