--- a/readthedocsext/theme/templates/semantic-ui/errors.html
+++ b/readthedocsext/theme/templates/semantic-ui/errors.html
@@ -1,12 +1,14 @@
+{% load i18n %}
+
 {% if form.errors and form.non_field_errors %}
-    <div class="ui negative message">
-        <div class="header">
-            Error 
-        </div>
-        <ul class="list">
-            {% for error in form.non_field_errors %}
-                <li>{{ error|escape }}</li>
-            {% endfor %}
-        </ul>
+  <div class="ui small negative message">
+    <div class="header">
+      {% trans "Error" %}
     </div>
+    <ul class="list">
+      {% for error in form.non_field_errors %}
+        <li>{{ error|escape }}</li>
+      {% endfor %}
+    </ul>
+  </div>
 {% endif %}
